--- a/config.json
+++ b/config.json
@@ -1,26 +1,26 @@
 {
-    "dedicatedServerId": "ar-gm-%profilename",
-    "region": "NA",
-    "gameHostBindAddress": "",
-    "gameHostBindPort": 2001,
-    "gameHostRegisterBindAddress": "",
-    "gameHostRegisterPort": 2001,
-    "adminPassword" : "password",
-  "game": {
-    "name": "servername",
-    "scenarioId": "{98D1DA94DD085044}Missions/ConflictWithoutAIs.conf",
-    "playerCountLimit": 64,
-    "visible": true,
-    "gameMode": "",
-    "supportedGameClientTypes": [
-      "PLATFORM_PC"
-    ],
-    "gameProperties": {
-      "serverMaxViewDistance": 1600,
-      "battleEye": true,
-      "fastValidation": true
+    "adminPassword": "Password",
+    "dedicatedServerId": "",
+    "game": {
+        "gameMode": "",
+        "gameProperties": {
+            "battleEye": true,
+            "fastValidation": true,
+            "serverMaxViewDistance": 1600
+        },
+        "mods": [],
+        "name": "Arma Reforger Conflit / Gamerhostinghub.ca",
+        "playerCountLimit": 64,
+        "scenarioId": "{ECC61978EDCC2B5A}Missions/23_Campaign.conf",
+        "supportedGameClientTypes": [
+            "PLATFORM_PC"
+        ],
+        "visible": true
     },
-    "mods": [
-    ]
-  }
+    "gameHostBindAddress": "",
+    "gameHostBindPort": "2001,",
+    "gameHostRegisterBindAddress": "192.99.20.143",
+    "gameHostRegisterPort": "2001,",
+    "playerCountLimit": ",",
+    "region": "NA"
 }
