--- a/config.json
+++ b/config.json
@@ -22,5 +22,5 @@
     "gameHostRegisterBindAddress": "192.99.20.143",
     "gameHostRegisterPort": "2001,",
     "playerCountLimit": ",",
-    "region": "NA"
+    "region": "US"
 }
